--- a/jugos.html
+++ b/jugos.html
@@ -4,14 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css"> 
+
     <title>Document</title>
 </head>
-<h1>Disfruta de nuestros jugos 100% naturales.</h1>
-<li>Jugo de mora 3 us </li>
-<li>Jugo de fresa 3 us </li>
-<li>Jugo de lulo 3 us </li>
-<li>Jugo de mango 3 us </li>
-<li>Jugo de guanabana 3 us </li>
+<header>
+
+    <h1>Disfruta de nuestros jugos 100% naturales.</h1>
+
+<li>Jugo de mora </li>
+    <h3>2 us</h3>
+ <br>
+ <br>
+ <br>
+<li>Jugo de fresa </li>
+    <h3>2 us</h3>
+ <br>
+ <br>
+ <br>
+<li>Jugo de lulo </li>
+     <h3>2 us</h3>
+ <br>
+ <br>
+ <br>
+<li>Jugo de mango </li>
+    <h3>2 us</h3>
+ <br>
+ <br>
+ <br>
+
+<li>Jugo de guanabana </li>
+   <h3>2 us</h3>
+</header>
+
 <body>
     
 </body>
