--- a/index.html
+++ b/index.html
@@ -5,74 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+    
+   <link rel="stylesheet" href="css/styles.css"> 
+
 </head>
-<body>
-    <header>
-         <h1>burguer Queen</h1>
-    <nav>
-        <ol>
-   
-    <h2>Bienvenidos a nuestra pagina</h2>
+
+<body> 
+
+<header>
+
+ <h1>  Burguer  <span>Queen</span> </h1>
 
 
-    <h2>estas son algunas de nuestras opciones.</h2>
-   
-<li> <a href="hamburguesas.html"> <h2> hamburguesas.</h2> </a>  </li> 
  
+
+ <h2>Bienvenidos a nuestra pagina</h2>
+
+ <h2>estas son algunas de nuestras opciones.</h2>
+   
+<lu> <a href="hamburguesas.html"> <h2> hamburguesas.</h2> </a>  </lu> 
  
 <img src="img/th.jpg" alt="hamburguesas">
-
 <br>
 <br>    
 <br>
-
-<li>  <a href="perros_y_perras.html"> <h2> perros y perras.</h2> </a></li>
-
+<lu>  <a href="perros_y_perras.html"> <h2> perros y perras.</h2> </a></lu>
 
 <img src="img/perros.jpg" alt="perros y perras">
-
 <br>
 <br>
 <br>
-<li> <a href="chuzos_de_pollo.html"> <h2> chuzos.</h2> </a> </li>
-
+<lu> <a href="chuzos_de_pollo.html"> <h2> chuzos.</h2> </a> </lu>
 
 <img src="img/chuzos pollo.jpg" alt="chuzos">
-
 <br>
 <br>
 <br>
-
-<li>  <a href="jugos.html"> <h2> jugos. </h2> </a> </li>
+<lu>  <a href="jugos.html"> <h2> jugos. </h2> </a> </lu>
 
 <img src="img/jugos2.jpg" alt="jugos"> 
-
 <br>
 <br>
 <br>
-
-
-
-
-
-<h3>pregunta por nuestros descuentos especiales.</h3>
-    </ol>
+  
+<h2>disfruta de nuestra excelente atencion.</h2>
    
-    <h2>disfruta de nuestra excelente atencion.</h2>
+ <p>Nos enfocamos en la atencion a el cliente y nos caracteriza nuestros productos frescos y de excelente calidad.</p>
    
-    <p>Nos enfocamos en la atencion a el cliente y nos caracteriza nuestros productos frescos y de excelente calidad.</p>
-   
-
 <hr> 
-
-<nav> 
-
+ 
  <h2> <a href="https://api.whatsapp.com/send?phone=573226224188">  &#9743; 322 622 41 88 </a> </h2> 
 
  <h3>Santiago Duque Hincapie &#169; </h3>
  
 <h3>&#9993; comidasrapidas@gmail.com</h3>
- <nav>
+ 
 </header>
 </body>
 </html>
