--- a/index.html
+++ b/index.html
@@ -15,35 +15,40 @@
 <body> 
 
 <header>
-
  <h1>  Burguer  <span>Queen</span> </h1>
-
-
+</header>
  
 
  <h2>Bienvenidos a nuestra pagina</h2>
 
  <h2>estas son algunas de nuestras opciones.</h2>
-   
-<lu> <a href="hamburguesas.html"> <h2> hamburguesas.</h2> </a>  </lu> 
- 
+
+ <nav>
+    <lu> <a href="hamburguesas.html"> <h2> hamburguesas.</h2> </a>  </lu> 
+ </nav>  
 <img src="img/th.jpg" alt="hamburguesas">
 <br>
 <br>    
 <br>
-<lu>  <a href="perros_y_perras.html"> <h2> perros y perras.</h2> </a></lu>
 
+<nav>
+    <lu>  <a href="perros_y_perras.html"> <h2> perros y perras.</h2> </a></lu>
+</nav>
 <img src="img/perros.jpg" alt="perros y perras">
 <br>
 <br>
 <br>
-<lu> <a href="chuzos_de_pollo.html"> <h2> chuzos.</h2> </a> </lu>
+<nav>
+    <lu> <a href="chuzos_de_pollo.html"> <h2> chuzos.</h2> </a> </lu>
+</nav>
 
 <img src="img/chuzos pollo.jpg" alt="chuzos">
 <br>
 <br>
 <br>
-<lu>  <a href="jugos.html"> <h2> jugos. </h2> </a> </lu>
+<nav>
+    <lu>  <a href="jugos.html"> <h2> jugos. </h2> </a> </lu>
+</nav>
 
 <img src="img/jugos2.jpg" alt="jugos"> 
 <br>
@@ -56,12 +61,14 @@
    
 <hr> 
  
- <h2> <a href="https://api.whatsapp.com/send?phone=573226224188">  &#9743; 322 622 41 88 </a> </h2> 
+ <nav>
+    <h2> <a href="https://api.whatsapp.com/send?phone=573226224188">  &#9743; 322 622 41 88 </a> </h2>
+ </nav> 
 
  <h3>Santiago Duque Hincapie &#169; </h3>
  
 <h3>&#9993; comidasrapidas@gmail.com</h3>
  
-</header>
+
 </body>
 </html>
