--- a/perros_y_perras.html
+++ b/perros_y_perras.html
@@ -9,9 +9,11 @@
      <title>hamburguesas</title>
 </head>
 <body>
+
+    <header>
+    <h1> Disfruta de nuestros perros y perras.</h1>
     <header>
 
-    <h1> Disfruta de nuestros perros y perras.</h1>
     <li>combo 1 </li>
     <p>salcicha, ensalada, queso fundido.</p>
           <h3>5 us </h3>
@@ -43,7 +45,5 @@
     <p>adicion de queso 1 us</p>
     <p>adicion de papas fritas 1,5 us</p>
 
-     <header>
   <body>
-    
-     
+    </html>
