--- a/perros_y_perras.html
+++ b/perros_y_perras.html
@@ -12,7 +12,7 @@
 
     <header>
     <h1> Disfruta de nuestros perros y perras.</h1>
-    <header>
+    </header>
 
     <li>combo 1 </li>
     <p>salcicha, ensalada, queso fundido.</p>
