--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <h2>estas son algunas de nuestras opciones.</h2>
 
  <nav>
-    <lu> <a href="hamburguesas.html"> <h2> hamburguesas.</h2> </a>  </lu> 
+    <ul> <a href="hamburguesas.html"> <h2> hamburguesas.</h2> </a>  </ul> 
  </nav>  
 <img src="img/th.jpg" alt="hamburguesas">
 <br>
@@ -32,14 +32,14 @@
 <br>
 
 <nav>
-    <lu>  <a href="perros_y_perras.html"> <h2> perros y perras.</h2> </a></lu>
+    <ul>  <a href="perros_y_perras.html"> <h2> perros y perras.</h2> </a></ul>
 </nav>
 <img src="img/perros.jpg" alt="perros y perras">
 <br>
 <br>
 <br>
 <nav>
-    <lu> <a href="chuzos_de_pollo.html"> <h2> chuzos.</h2> </a> </lu>
+    <ul> <a href="chuzos_de_pollo.html"> <h2> chuzos.</h2> </a> </ul>
 </nav>
 
 <img src="img/chuzos pollo.jpg" alt="chuzos">
@@ -47,7 +47,7 @@
 <br>
 <br>
 <nav>
-    <lu>  <a href="jugos.html"> <h2> jugos. </h2> </a> </lu>
+    <ul>  <a href="jugos.html"> <h2> jugos. </h2> </a> </ul>
 </nav>
 
 <img src="img/jugos2.jpg" alt="jugos"> 
@@ -58,13 +58,19 @@
 <h2>disfruta de nuestra excelente atencion.</h2>
    
  <p>Nos enfocamos en la atencion a el cliente y nos caracteriza nuestros productos frescos y de excelente calidad.</p>
-   
+    
+ <a href="registo.html">registro </a>
+
 <hr> 
  
  <nav>
     <h2> <a href="https://api.whatsapp.com/send?phone=573226224188">  &#9743; 322 622 41 88 </a> </h2>
  </nav> 
 
+ 
+
+
+  
  <h3>Santiago Duque Hincapie &#169; </h3>
  
 <h3>&#9993; comidasrapidas@gmail.com</h3>
