--- a/perros_y_perras.html
+++ b/perros_y_perras.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="css/styles.css"> 
-     <title>hamburguesas</title>
+     <title>perros_y_perras</title>
+     
 </head>
 <body>
 
     <header>
     <h1> Disfruta de nuestros perros y perras.</h1>
     </header>
-
+    <ul>
     <li>combo 1 </li>
     <p>salcicha, ensalada, queso fundido.</p>
           <h3>5 us </h3>
@@ -35,6 +35,7 @@
      <br>
 
     <li>combo 4</li>
+    </ul>
     <p>2ble tocineta, 2ble queso, ensalada, papas fritas</p>
          <h3>8,5 us</h3>
     <br>
