cambios finales trabajo completo

--- a/jugos.html
+++ b/jugos.html
@@ -5,38 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/stylesjugos.css">
 </head>
 <body>
 <header>
     <h1>Disfruta de nuestros jugos 100% naturales.</h1>
 </header>
-<ul>
+<nav class="Nav1">
+    <a href="index.html"> <h2> Inicio.</h2> </a>
+    <a href="hamburguesas.html"> <h2>Hamburguesas.</h2> </a>
+    <a href="chuzos_de_pollo.html"> <h2>Chuzos.</h2> </a></ul>
+    <a href="perros_y_perras.html"> <h2> Perros y Perras. </h2> </a>
+</nav>
 
-<li>Jugo de mora </li>
+
+<ul>Jugo de mora</ul>
     <h3>2 us</h3>
  <br>
  <br>
  <br>
-<li>Jugo de fresa </li>
+<ul>Jugo de fresa</ul>
     <h3>2 us</h3>
  <br>
  <br>
  <br>
-<li>Jugo de lulo </li>
+ <ul>Jugo de lulo</ul>
      <h3>2 us</h3>
  <br>
  <br>
  <br>
-<li>Jugo de mango </li>
+<ul>Jugo de mango </ul>
     <h3>2 us</h3>
  <br>
  <br>
  <br>
-
-<li>Jugo de guanabana </li>
+<ul>Jugo de guanabana </ul>
    <h3>2 us</h3>
-</ul>
-    
+<footer>
+<hr>
+   <h3>Santiago Duque Hincapie &#169; </h3>
+ 
+<h3>&#9993; Comidasrapidas@gmail.com</h3>
+
+</footer>
 </body>
 </html>
