--- a/registo.html
+++ b/registo.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css"> 
 </head>
 <body>
 
 <header>
     <h1>Tu opinion es muy importante para nosotros</h1>
 </header>
+<nav class="Nav1">
+    <a href="index.html"> <h2> Inicio</h2> </a>
+</nav>
 <br>
 <br>
  <h2>Te invitamos a realizar esta breve encuesta.</h2>
@@ -43,6 +48,12 @@
         </p>
     </form>
     <textarea name="Comentario" cols="30" rows="10" placeholder="Has tus comentarios, y deja tus opiniones."></textarea>
-
+<footer>
+    <hr>
+    <h3>Santiago Duque Hincapie &#169; </h3>
+ 
+    <h3>&#9993; Comidasrapidas@gmail.com</h3>
+</footer>
+    
 </body>
 </html>
