--- a/hamburguesas.html
+++ b/hamburguesas.html
@@ -59,3 +59,33 @@
 
 </body>
 </html>
+<div class="container">
+  <div class="row align-items-start">
+    <div class="img-fluid col-6 text-center">
+         
+              <div class="col-6 text-center">
+                  <ul>combo 1</ul>
+                      <p>carne, ensalada, tocineta, queso fundido, papas fritas.</p>
+                      <h3>6 us</h3>
+                      <br><br><br>
+                  </div>
+                  <div class="col-6 text-center">
+                  <ul>combo 2</ul>
+
+                      <p>2ble carne, 2ble queso, ensalada, 2ble tocineta, papas fritas. </p>
+                      <h3>7 us</h3>
+                      <br><br><br>
+                  </div>
+                  <div class="col-6 text-center">
+                      <ul>combo 3</ul>      
+                  </P>carne de res, queso, ensalada, tocineta, papas fritas. <P>
+                  <h3>9 us </h3>
+                  <br><br><br>
+              </div>
+              <div class="col-6 text-center">
+              <ul>combo 4</ul>
+                  <p>2ble carne de res, 2ble queso, 2ble tocineta, papas fritas.</p>
+                  <h3>12 us</h3>
+              </div>
+      </div> 
+  </div> 
