--- a/index2.html
+++ b/index2.html
@@ -7,47 +7,42 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">      
+    <link rel="stylesheet" href="css/styles.css"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">     
 </head>
 
 <body> 
 
 <header>
- <h1>  Burguer  <span>Queen</span> </h1>
+ <h1>  Burguer Queen</h1>
 </header>
  
 
  <h2>Bienvenidos a nuestra pagina</h2>
 
- <h2>estas son algunas de nuestras opciones.</h2>
+ <h2>Estas son algunas de nuestras opciones.</h2>
 
  
-     <ul> <a href="hamburguesas.html"> <h2> hamburguesas.</h2> </a>  </ul> 
-  
+<ul> <a href="hamburguesas.html"> <h2> Hamburguesas.</h2> </a>  </ul> 
 <img src="img/th.jpg" alt="hamburguesas">
 <br>
 <br>    
 <br>
 
 
-     <ul>  <a href="perros_y_perras.html"> <h2> Perros y Perras.</h2> </a></ul>
-
+<ul>  <a href="perros_y_perras.html"> <h2> Perros y Perras.</h2> </a></ul>
 <img src="img/perros.jpg" alt="perros y perras">
 <br>
 <br>
 <br>
 
-     <ul> <a href="chuzos_de_pollo.html"> <h2> Chuzos.</h2> </a> </ul>
-
-
+<ul> <a href="chuzos_de_pollo.html"> <h2> Chuzos.</h2> </a> </ul>
 <img src="img/chuzos pollo.jpg" alt="chuzos">
 <br>
 <br>
 <br>
 
-     <ul>  <a href="jugos.html"> <h2> jugos. </h2> </a> </ul>
-
-
+ <ul>  <a href="jugos.html"> <h2> jugos. </h2> </a> </ul>
 <img src="img/jugos2.jpg" alt="jugos"> 
 <br>
 <br>
@@ -70,6 +65,6 @@
 </footer>
 
  
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
